# uka-rs

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  renovate.json
.github/workflows/: ci.yaml  pr_agent.yaml
dll_loader/: Cargo.toml
dll_loader/src/: lib.rs  main.rs
examples/ghost/: Cargo.toml
examples/ghost/src/: context.rs  handler.rs  lib.rs
examples/ghost_caller/: Cargo.toml
examples/ghost_caller/src/: main.rs
sstp/: Cargo.toml
sstp/examples/: communicate_11.rs  communicate_12.rs  execute_10.rs  execute_11.rs  execute_12.rs  execute_13.rs  give_11.rs  notification_10.rs  notification_11.rs  response_no_additional.rs  response_with_additional.rs  send_11.rs  send_12.rs  send_13.rs  send_14.rs
sstp/src/: charset.rs  lib.rs  method.rs  parse.rs  request.rs  response.rs  status.rs  version.rs
sstp/src/header/: map.rs  name.rs  value.rs
sstp/tests/: extend_spec.rs
sstp_protocol/: Cargo.toml
sstp_protocol/examples/: communicate_11.rs  communicate_13.rs  execute_10.rs  execute_11.rs  execute_12.rs  execute_13.rs  give_11.rs  notification_10.rs  notification_11.rs  response_no_additional.rs  response_with_additional.rs  send_11.rs  send_12.rs  send_13.rs  send_14.rs
sstp_protocol/src/: charset.rs  decode.rs  encode.rs  header.rs  lib.rs  method.rs  parse.rs  request.rs  response.rs  status.rs  version.rs
sstp_protocol/src/header/: map.rs  name.rs  value.rs
sstp_protocol/tests/: example.rs  extend_spec.rs
uka_macro/: Cargo.toml
uka_macro/src/: lib.rs  types.rs
uka_sakura_script/: Cargo.toml
uka_sakura_script/src/: tokenizer.rs
uka_sakura_script/src/tokenizer/: cursor.rs  lexer.rs  span.rs  stream.rs  token.rs
uka_shiori/: Cargo.toml
uka_shiori/src/: dll.rs  lib.rs  runtime.rs  types.rs
uka_shiori/src/dll/: adapter.rs  caller.rs
uka_shiori/src/runtime/: context.rs  error.rs  service.rs  shiori.rs
uka_shiori/src/types/: request.rs  response.rs  v3.rs
uka_shiori/src/types/v3/: charset.rs  error.rs  events.rs  header.rs  method.rs  parse.rs  request.rs  response.rs  status.rs  version.rs
uka_shiori/src/types/v3/events/: on_anchor_select.rs  undefined.rs
uka_shiori/src/types/v3/header/: name.rs  value.rs
uka_shiori/tests/: extend_spec_shiori_v3.rs  spec_shiori_v3.rs
uka_sstp/: Cargo.toml
uka_sstp/examples/: communicate_11.rs  communicate_13.rs  execute_10.rs  execute_11.rs  execute_12.rs  execute_13.rs  give_11.rs  notification_10.rs  notification_11.rs  response_no_additional.rs  response_with_additional.rs  send_11.rs  send_12.rs  send_13.rs  send_14.rs
uka_sstp/src/: charset.rs  lib.rs  method.rs  parse.rs  request.rs  response.rs  status.rs  version.rs
uka_sstp/src/header/: name.rs  value.rs
uka_sstp/tests/: example_spec.rs  extend_spec.rs
uka_util/: Cargo.toml
uka_util/src/: alloc.rs  bag.rs  cursor.rs  decode.rs  encode.rs  lib.rs  ptr.rs  string.rs
uka_util/src/ptr/: owned.rs  raw.rs
utils/bytes_macro/: Cargo.toml
utils/read_macro/: Cargo.toml
utils/read_macro/src/: lib.rs
