[package]
name = "sstp_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
libc = "0.2.139"
windows = {version = "0.44.0", features = [ "Win32_System_Memory", "Win32_Globalization", "Win32_Foundation" ]}

[dev-dependencies]
