[package]
name = "dll_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
encoding_rs = "0.8.31"
libc = "0.2.139"
once_cell = "1.17.1"
plthook = "0.2.2"
widestring = "1.0.2"
windows = {version = "0.46.0", features = [
    "Win32_System_Memory",
    "Win32_Globalization",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming"
]}

[dev-dependencies]
