[package]
name = "uka_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }
proc-macro2 = "1.0.66"
proc-macro-error = "1.0.4"

[dev-dependencies]

