[package]
name = "uka_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.59", features = ["full"] }
proc-macro2 = "1.0.80"
proc-macro-error = "1.0.4"

[dev-dependencies]

