[package]
name = "uka_shiori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
libloading = "0.8.1"
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["full"] }
uka_util = { path = "../uka_util" }

[dev-dependencies]
anyhow = "1.0.75"
once_cell = "1.19.0"
rstest = "0.18.2"
