[package]
name = "uka_shiori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
libloading = "0.8.3"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
uka_util = { path = "../uka_util" }

[dev-dependencies]
anyhow = "1.0.82"
once_cell = "1.19.0"
rstest = "0.19.0"
