[package]
name = "uka_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
libc = "0.2.147"
windows = { version = "0.48.0", features = ["Win32_System_Memory", "Win32_Foundation"] }

[dev-dependencies]

