[package]
name = "uka_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
encoding_rs = "0.8.33"
thiserror = "1.0.56"
uka_macro = { path = "../uka_macro" }
libc = "0.2.153"
windows = { version = "0.52.0", features = ["Win32_System_Memory", "Win32_Foundation"] }

[dev-dependencies]
anyhow = "1.0.79"
rstest = "0.18.2"

