[package]
name = "uka_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
encoding_rs = "0.8.34"
thiserror = "2.0.0"
uka_macro = { path = "../uka_macro" }
libc = "0.2.154"
windows-sys = { version = "0.61.0", features = ["Win32_System_Memory", "Win32_Foundation"] }

[dev-dependencies]
anyhow = "1.0.82"
rstest = "0.26.0"

